--- a/CSharpBible/Graphics/SuperResolutionOnnxSample2/MainWindow.xaml
+++ b/CSharpBible/Graphics/SuperResolutionOnnxSample2/MainWindow.xaml
@@ -1,7 +1,7 @@
 <Window x:Class="SuperResolutionOnnxSample.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ONNX Super-Resolution" Height="560" Width="980">
+        Title="ONNX Super-Resolution" Height="520" Width="900">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -16,13 +16,7 @@
         <StackPanel Orientation="Horizontal" Grid.ColumnSpan="2" Margin="0,0,0,8">
             <Button Content="Bild laden" Width="120" Margin="0,0,8,0" Click="OnLoadClick"/>
             <Button Content="Super-Resolution" Width="140" Margin="0,0,8,0" Click="OnSuperResClick"/>
-            <Button Content="Ergebnis speichern" Width="150" Margin="0,0,16,0" Click="OnSaveClick"/>
-
-            <CheckBox x:Name="TilesetMode" Content="Tileset" VerticalAlignment="Center" Margin="0,0,8,0"/>
-            <TextBlock Text="Tile:" VerticalAlignment="Center" Margin="0,0,4,0"/>
-            <TextBox x:Name="TileSizeBox" Width="60" Text="16" Margin="0,0,4,0"/>
-            <Button Content="Schaetzen" Width="80" Margin="0,0,16,0" Click="OnEstimateTileClick"/>
-
+            <Button Content="Ergebnis speichern" Width="150" Click="OnSaveClick"/>
             <TextBlock Text="Status:" Margin="16,0,4,0" VerticalAlignment="Center"/>
             <TextBlock Text="" x:Name="StatusText" VerticalAlignment="Center"/>
         </StackPanel>
@@ -30,16 +24,16 @@
         <Border Grid.Row="1" Grid.Column="0" BorderBrush="Gray" BorderThickness="1" Margin="0,10,5,10" Padding="5">
             <StackPanel>
                 <TextBlock Text="Eingabe" FontWeight="Bold"/>
-                <Image x:Name="InputImage" Stretch="Uniform" Height="380"/>
+                <Image x:Name="InputImage" Stretch="Uniform" Height="360"/>
             </StackPanel>
         </Border>
         <Border Grid.Row="1" Grid.Column="1" BorderBrush="Gray" BorderThickness="1" Margin="5,10,0,10" Padding="5">
             <StackPanel>
                 <TextBlock Text="Upscaled" FontWeight="Bold"/>
-                <Image x:Name="OutputImage" Stretch="Uniform" Height="380"/>
+                <Image x:Name="OutputImage" Stretch="Uniform" Height="360"/>
             </StackPanel>
         </Border>
 
-        <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Text="Modell: ONNX super-resolution-10 (Y-Channel, 3x)" FontStyle="Italic"/>
+        <TextBlock Grid.Row="2" Grid.ColumnSpan="2" Text="Modell: ONNX ESPCN (3x Upscaling)" FontStyle="Italic"/>
     </Grid>
 </Window>
