--- a/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/MainWindow.xaml
@@ -1,21 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Window x:Class="VTileEdit.WPF.Views.MainWindow"
-         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-         xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
-         xmlns:controls="clr-namespace:VTileEdit.WPF.Views.Controls"
-         xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
-         mc:Ignorable="d"
-         Title="{x:Static properties:Strings.MainWindowTitle}"
-         Height="720"
-         Width="1200"
-         MinWidth="960"
-         MinHeight="640">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
+        xmlns:controls="clr-namespace:VTileEdit.WPF.Views.Controls"
+        mc:Ignorable="d"
+        Title="{x:Static properties:Strings.MainWindowTitle}"
+        Height="720"
+        Width="1200"
+        MinWidth="960"
+        MinHeight="640">
     <DockPanel>
         <DockPanel.Resources>
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         </DockPanel.Resources>
+
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="{x:Static properties:Strings.MenuFileHeader}">
                 <MenuItem Header="{x:Static properties:Strings.MenuFileNew}" Command="{Binding NewCommand}" />
@@ -31,17 +32,20 @@
                 <MenuItem Header="{x:Static properties:Strings.MenuEditRedo}" Command="{Binding RedoCommand}" />
             </MenuItem>
         </Menu>
+
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="320" />
                 <ColumnDefinition Width="5" />
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
+
             <Grid Grid.Column="0" Margin="5">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
+
                 <Expander Grid.Row="0"
                           Margin="0,0,0,8"
                           Collapsed="TileSetExpander_Collapsed"
@@ -55,6 +59,7 @@
                                        ToolTip="{x:Static properties:Strings.TileSetPendingIndicator}" />
                         </StackPanel>
                     </Expander.Header>
+
                     <StackPanel Margin="0,4,0,0">
                         <Grid>
                             <Grid.ColumnDefinitions>
@@ -66,37 +71,42 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
+
                             <TextBlock Grid.Column="0"
-                                        Text="{x:Static properties:Strings.TileSetNameLabel}"
-                                        Margin="0,0,8,8"
-                                        VerticalAlignment="Center" />
+                                       Text="{x:Static properties:Strings.TileSetNameLabel}"
+                                       Margin="0,0,8,8"
+                                       VerticalAlignment="Center" />
                             <TextBox Grid.Column="1"
-                                      Text="{Binding TileSetNameInput, UpdateSourceTrigger=PropertyChanged}"
-                                      Margin="0,0,8,8" />
+                                     Text="{Binding TileSetNameInput, UpdateSourceTrigger=PropertyChanged}"
+                                     Margin="0,0,8,8" />
+
                             <TextBlock Grid.Column="0"
-                                        Grid.Row="1"
-                                        Text="{x:Static properties:Strings.TileSetWidthLabel}"
-                                        Margin="0,0,8,8"
-                                        VerticalAlignment="Center" />
+                                       Grid.Row="1"
+                                       Text="{x:Static properties:Strings.TileSetWidthLabel}"
+                                       Margin="0,0,8,8"
+                                       VerticalAlignment="Center" />
                             <TextBox Grid.Column="1"
-                                        Grid.Row="1"
-                                        Text="{Binding TileSetTileWidthInput, UpdateSourceTrigger=PropertyChanged}"
-                                        Margin="0,0,8,8" />
+                                     Grid.Row="1"
+                                     Text="{Binding TileSetTileWidthInput, UpdateSourceTrigger=PropertyChanged}"
+                                     Margin="0,0,8,8" />
+
                             <TextBlock Grid.Column="0"
-                                        Grid.Row="2"
-                                        Text="{x:Static properties:Strings.TileSetHeightLabel}"
-                                        Margin="0,0,8,0"
-                                        VerticalAlignment="Center" />
+                                       Grid.Row="2"
+                                       Text="{x:Static properties:Strings.TileSetHeightLabel}"
+                                       Margin="0,0,8,0"
+                                       VerticalAlignment="Center" />
                             <TextBox Grid.Column="1"
-                                        Grid.Row="2"
-                                        Text="{Binding TileSetTileHeightInput, UpdateSourceTrigger=PropertyChanged}" 
-                                        Margin="0,0,8,8"/>
+                                     Grid.Row="2"
+                                     Text="{Binding TileSetTileHeightInput, UpdateSourceTrigger=PropertyChanged}"
+                                     Margin="0,0,8,8" />
                         </Grid>
+
                         <TextBlock Text="{x:Static properties:Strings.TileSetApplyWarning}"
                                    TextWrapping="Wrap"
                                    Margin="8,8,8,8"
                                    Foreground="DarkRed"
                                    Visibility="{Binding TileSetShowsShrinkWarning, Converter={StaticResource BooleanToVisibilityConverter}}" />
+
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                             <Button Content="{x:Static properties:Strings.TileSetDiscardButtonLabel}"
                                     Command="{Binding DiscardTileSetChangesCommand}"
@@ -113,51 +123,17 @@
                         </StackPanel>
                     </StackPanel>
                 </Expander>
+
                 <controls:TileListView Grid.Row="1" FontFamily="{Binding SelectedFontFamily}" />
             </Grid>
+
             <GridSplitter Grid.Column="1"
                           Width="5"
                           HorizontalAlignment="Stretch"
                           VerticalAlignment="Stretch"
                           Background="#22000000" />
-            <Grid Grid.Column="2" Margin="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="0,0,0,8" VerticalAlignment="Center">
-                    <TextBlock Text="{x:Static properties:Strings.FontSelectorLabel}" VerticalAlignment="Center" Margin="0,0,8,0" />
-                    <ComboBox Width="220"
-                              ItemsSource="{Binding AvailableFontFamilies}"
-                              SelectedItem="{Binding SelectedFontFamily}"
-                              DisplayMemberPath="Source" />
-                </StackPanel>
-                <controls:TileEditorView Grid.Row="1" Margin="0,0,0,8" />
-                <controls:CharmapView Grid.Row="2"
-                                      ItemsSource="{Binding CharacterPalette}"
-                                      Command="{Binding ApplyCharacterCommand}"
-                                      Margin="0,0,0,8" />
-                <Grid Grid.Row="3">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <controls:PaletteSelectorView Grid.Column="0"
-                                                  Margin="0,0,4,0"
-                                                  Header="{x:Static properties:Strings.PaletteForegroundHeader}"
-                                                  ItemsSource="{Binding Palette}"
-                                                  Command="{Binding ApplyForegroundCommand}"
-                                                  SelectionMode="Foreground" />
-                    <controls:PaletteSelectorView Grid.Column="1"
-                                                  Margin="4,0,0,0"
-                                                  Header="{x:Static properties:Strings.PaletteBackgroundHeader}"
-                                                  ItemsSource="{Binding Palette}"
-                                                  Command="{Binding ApplyBackgroundCommand}"
-                                                  SelectionMode="Background" />
-                </Grid>
-            </Grid>
+
+            <controls:TileEditorHostView Grid.Column="2" DataContext="{Binding TileEditorHost}" />
         </Grid>
     </DockPanel>
 </Window>
