--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/PaletteSelectorView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/PaletteSelectorView.xaml
@@ -1,10 +1,11 @@
-<UserControl x:Class="VTileEdit.WPF.Views.Controls.PaletteSelectorView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
-             xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
-             xmlns:self="clr-namespace:VTileEdit.WPF.Views.Controls"
-             x:Name="Root">
+<UserControl
+    x:Class="VTileEdit.WPF.Views.Controls.PaletteSelectorView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
+    xmlns:self="clr-namespace:VTileEdit.WPF.Views.Controls"
+    xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
+    x:Name="Root">
     <UserControl.Resources>
         <converters:PaletteSelectionConverter x:Key="PaletteSelectionConverter" />
     </UserControl.Resources>
@@ -17,15 +18,16 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate DataType="{x:Type vm:ColorSwatchViewModel}">
-                    <ToggleButton Command="{Binding Command, RelativeSource={RelativeSource AncestorType={x:Type self:PaletteSelectorView}}}"
-                                  CommandParameter="{Binding}"
-                                  Margin="2"
-                                  Width="50"
-                                  Height="30"
-                                  Background="{Binding Brush}"
-                                  BorderBrush="#33000000"
-                                  BorderThickness="1"
-                                  Focusable="False">
+                    <ToggleButton
+                        Width="50"
+                        Height="30"
+                        Margin="2"
+                        Background="{Binding Brush}"
+                        BorderBrush="#33000000"
+                        BorderThickness="1"
+                        Command="{Binding Command, RelativeSource={RelativeSource AncestorType={x:Type self:PaletteSelectorView}}}"
+                        CommandParameter="{Binding}"
+                        Focusable="False">
                         <ToggleButton.IsChecked>
                             <MultiBinding Converter="{StaticResource PaletteSelectionConverter}" Mode="OneWay">
                                 <Binding Path="IsForegroundSelection" />
@@ -35,11 +37,12 @@
                         </ToggleButton.IsChecked>
                         <ToggleButton.Template>
                             <ControlTemplate TargetType="ToggleButton">
-                                <Border x:Name="ColorBorder"
-                                        Background="{TemplateBinding Background}"
-                                        BorderBrush="{TemplateBinding BorderBrush}"
-                                        BorderThickness="{TemplateBinding BorderThickness}"
-                                        CornerRadius="4" />
+                                <Border
+                                    x:Name="ColorBorder"
+                                    Background="{TemplateBinding Background}"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    CornerRadius="4" />
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsChecked" Value="True">
                                         <Setter TargetName="ColorBorder" Property="BorderBrush" Value="#FF5A9BD8" />
