--- a/CSharpBible/Games/VTileEdit.WPF/App.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/App.xaml
@@ -1,7 +1,7 @@
-<Application x:Class="VTileEdit.WPF.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/MainWindow.xaml">
-    <Application.Resources>
-    </Application.Resources>
+<Application
+    x:Class="VTileEdit.WPF.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    StartupUri="Views/MainWindow.xaml">
+    <Application.Resources />
 </Application>
