--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/CharmapView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/CharmapView.xaml
@@ -1,18 +1,20 @@
-<UserControl x:Class="VTileEdit.WPF.Views.Controls.CharmapView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
-             xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
-             xmlns:controls="clr-namespace:VTileEdit.WPF.Views.Controls"
-             x:Name="Root">
+<UserControl
+    x:Class="VTileEdit.WPF.Views.Controls.CharmapView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:controls="clr-namespace:VTileEdit.WPF.Views.Controls"
+    xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
+    xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
+    x:Name="Root">
     <UserControl.Resources>
         <converters:CharacterSelectionConverter x:Key="CharacterSelectionConverter" />
     </UserControl.Resources>
     <GroupBox Header="{x:Static properties:Strings.CharMapHeader}">
         <StackPanel>
-            <TextBlock Text="{x:Static properties:Strings.CharMapHint}"
-                       Margin="0,0,0,8"
-                       Foreground="Gray" />
+            <TextBlock
+                Margin="0,0,0,8"
+                Foreground="Gray"
+                Text="{x:Static properties:Strings.CharMapHint}" />
             <ScrollViewer Height="140">
                 <ItemsControl ItemsSource="{Binding ItemsSource, ElementName=Root}">
                     <ItemsControl.ItemsPanel>
@@ -22,15 +24,16 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Button Content="{Binding}"
-                                    FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=controls:CharmapView}}"
-                                    FontSize="14"
-                                    Margin="2"
-                                    Width="20"
-                                    Height="30"
-                                    Command="{Binding Command, RelativeSource={RelativeSource AncestorType={x:Type controls:CharmapView}}}"
-                                    CommandParameter="{Binding}"
-                                    ToolTip="{Binding}">
+                            <Button
+                                Width="20"
+                                Height="30"
+                                Margin="2"
+                                Command="{Binding Command, RelativeSource={RelativeSource AncestorType={x:Type controls:CharmapView}}}"
+                                CommandParameter="{Binding}"
+                                Content="{Binding}"
+                                FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=controls:CharmapView}}"
+                                FontSize="14"
+                                ToolTip="{Binding}">
                                 <Button.Style>
                                     <Style TargetType="Button">
                                         <Setter Property="Background" Value="Transparent" />
@@ -46,12 +49,12 @@
                                         <Setter Property="Template">
                                             <Setter.Value>
                                                 <ControlTemplate TargetType="Button">
-                                                    <Border Background="{TemplateBinding Background}"
-                                                            BorderBrush="{TemplateBinding BorderBrush}"
-                                                            BorderThickness="{TemplateBinding BorderThickness}"
-                                                            CornerRadius="3">
-                                                        <ContentPresenter HorizontalAlignment="Center"
-                                                                          VerticalAlignment="Center" />
+                                                    <Border
+                                                        Background="{TemplateBinding Background}"
+                                                        BorderBrush="{TemplateBinding BorderBrush}"
+                                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                                        CornerRadius="3">
+                                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
                                                     </Border>
                                                 </ControlTemplate>
                                             </Setter.Value>
@@ -61,24 +64,28 @@
                                                 <Trigger.EnterActions>
                                                     <BeginStoryboard x:Name="GrowStoryboard">
                                                         <Storyboard>
-                                                            <DoubleAnimation Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleX)"
-                                                                             To="2"
-                                                                             Duration="0:0:0.2" />
-                                                            <DoubleAnimation Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleY)"
-                                                                             To="2"
-                                                                             Duration="0:0:0.2" />
+                                                            <DoubleAnimation
+                                                                Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleX)"
+                                                                To="2"
+                                                                Duration="0:0:0.2" />
+                                                            <DoubleAnimation
+                                                                Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleY)"
+                                                                To="2"
+                                                                Duration="0:0:0.2" />
                                                         </Storyboard>
                                                     </BeginStoryboard>
                                                 </Trigger.EnterActions>
                                                 <Trigger.ExitActions>
                                                     <BeginStoryboard x:Name="ShrinkStoryboard">
                                                         <Storyboard>
-                                                            <DoubleAnimation Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleX)"
-                                                                             To="1"
-                                                                             Duration="0:0:0.2" />
-                                                            <DoubleAnimation Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleY)"
-                                                                             To="1"
-                                                                             Duration="0:0:0.2" />
+                                                            <DoubleAnimation
+                                                                Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleX)"
+                                                                To="1"
+                                                                Duration="0:0:0.2" />
+                                                            <DoubleAnimation
+                                                                Storyboard.TargetProperty="(RenderTransform).(ScaleTransform.ScaleY)"
+                                                                To="1"
+                                                                Duration="0:0:0.2" />
                                                         </Storyboard>
                                                     </BeginStoryboard>
                                                 </Trigger.ExitActions>
@@ -87,10 +94,11 @@
                                                 <DataTrigger.Binding>
                                                     <MultiBinding Converter="{StaticResource CharacterSelectionConverter}">
                                                         <Binding />
-                                                        <Binding Path="DataContext.SelectedGlyph.Character"
-                                                                 RelativeSource="{RelativeSource AncestorType=UserControl}"
-                                                                 TargetNullValue=" "
-                                                                 FallbackValue=" " />
+                                                        <Binding
+                                                            FallbackValue=" "
+                                                            Path="DataContext.SelectedGlyph.Character"
+                                                            RelativeSource="{RelativeSource AncestorType=UserControl}"
+                                                            TargetNullValue=" " />
                                                     </MultiBinding>
                                                 </DataTrigger.Binding>
                                                 <Setter Property="Background" Value="#FF5A9BD8" />
