--- a/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
+++ b/CSharpBible/Games/VTileEdit.WPF/Views/Controls/TileEditorView.xaml
@@ -1,14 +1,15 @@
-<UserControl x:Class="VTileEdit.WPF.Views.Controls.TileEditorView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
-             xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
-             xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             d:Width="600"
-             d:Height="400"
-             mc:Ignorable="d">
+<UserControl
+    x:Class="VTileEdit.WPF.Views.Controls.TileEditorView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:VTileEdit.WPF.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:properties="clr-namespace:VTileEdit.WPF.Properties"
+    xmlns:vm="clr-namespace:VTileEdit.WPF.ViewModels"
+    d:Height="400"
+    d:Width="600"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <Style x:Key="GlyphButtonStyle" TargetType="Button">
             <Setter Property="Background" Value="Transparent" />
@@ -25,8 +26,12 @@
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
-        <GroupBox Header="{x:Static properties:Strings.PreviewHeader}" Margin="0,0,0,8">
-            <Viewbox Stretch="Uniform" StretchDirection="Both" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+        <GroupBox Margin="0,0,0,8" Header="{x:Static properties:Strings.PreviewHeader}">
+            <Viewbox
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch"
+                Stretch="Uniform"
+                StretchDirection="Both">
                 <ItemsControl ItemsSource="{Binding SelectedTile.Glyphs}">
                     <ItemsControl.ItemContainerStyle>
                         <Style TargetType="ContentPresenter">
@@ -34,9 +39,10 @@
                             <Setter Property="VerticalAlignment" Value="Stretch" />
                             <Setter Property="Height">
                                 <Setter.Value>
-                                    <Binding Path="ActualWidth"
-                                             RelativeSource="{RelativeSource Self}"
-                                             Converter="{StaticResource WidthToHeightConverter}" />
+                                    <Binding
+                                        Converter="{StaticResource WidthToHeightConverter}"
+                                        Path="ActualWidth"
+                                        RelativeSource="{RelativeSource Self}" />
                                 </Setter.Value>
                             </Setter>
                         </Style>
@@ -48,10 +54,11 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate DataType="{x:Type vm:GlyphCellViewModel}">
-                            <Border Background="{Binding BackgroundBrush}"
-                                    BorderThickness="0.5"
-                                    BorderBrush="#22000000"
-                                    Margin="1">
+                            <Border
+                                Margin="1"
+                                Background="{Binding BackgroundBrush}"
+                                BorderBrush="#22000000"
+                                BorderThickness="0.5">
                                 <Border.Style>
                                     <Style TargetType="Border">
                                         <Setter Property="BorderBrush" Value="#22000000" />
@@ -64,18 +71,21 @@
                                         </Style.Triggers>
                                     </Style>
                                 </Border.Style>
-                                <Button Style="{StaticResource GlyphButtonStyle}"
-                                        Command="{Binding DataContext.SelectGlyphCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                        CommandParameter="{Binding}">
-                                    <Viewbox Stretch="Uniform"
-                                             HorizontalAlignment="Stretch"
-                                             VerticalAlignment="Stretch">
-                                        <TextBlock Text="{Binding Character}"
-                                                   FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=UserControl}}"
-                                                   FontSize="16"
-                                                   HorizontalAlignment="Center"
-                                                   VerticalAlignment="Center"
-                                                   Foreground="{Binding ForegroundBrush}" />
+                                <Button
+                                    Command="{Binding DataContext.SelectGlyphCommand, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                    CommandParameter="{Binding}"
+                                    Style="{StaticResource GlyphButtonStyle}">
+                                    <Viewbox
+                                        HorizontalAlignment="Stretch"
+                                        VerticalAlignment="Stretch"
+                                        Stretch="Uniform">
+                                        <TextBlock
+                                            HorizontalAlignment="Center"
+                                            VerticalAlignment="Center"
+                                            FontFamily="{Binding DataContext.SelectedFontFamily, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                                            FontSize="16"
+                                            Foreground="{Binding ForegroundBrush}"
+                                            Text="{Binding Character}" />
                                     </Viewbox>
                                 </Button>
                             </Border>
@@ -84,48 +94,64 @@
                 </ItemsControl>
             </Viewbox>
         </GroupBox>
-        <GroupBox Header="{x:Static properties:Strings.GlyphDetailsHeader}" Grid.Column="1">
+        <GroupBox Grid.Column="1" Header="{x:Static properties:Strings.GlyphDetailsHeader}">
             <StackPanel Margin="8" Orientation="Vertical">
-                <TextBlock Text="{x:Static properties:Strings.GlyphCharacterLabel}" Margin="8,0,8,0" VerticalAlignment="Center" />
-                <TextBox Grid.Column="1"
-                         Text="{Binding SelectedGlyph.CharacterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                         FontFamily="{Binding SelectedFontFamily}"
-                         FontSize="16"
-                         HorizontalContentAlignment="Center" />
-                <TextBlock Grid.Row="1" Text="{x:Static properties:Strings.GlyphForegroundLabel}" Margin="8,12,8,0" VerticalAlignment="Center" />
-                <ComboBox Grid.Row="1"
-                          Grid.Column="1"
-                          ItemsSource="{Binding Palette}"
-                          SelectedItem="{Binding SelectedForegroundSwatch}">
+                <TextBlock
+                    Margin="8,0,8,0"
+                    VerticalAlignment="Center"
+                    Text="{x:Static properties:Strings.GlyphCharacterLabel}" />
+                <TextBox
+                    Grid.Column="1"
+                    HorizontalContentAlignment="Center"
+                    FontFamily="{Binding SelectedFontFamily}"
+                    FontSize="16"
+                    Text="{Binding SelectedGlyph.CharacterText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <TextBlock
+                    Grid.Row="1"
+                    Margin="8,12,8,0"
+                    VerticalAlignment="Center"
+                    Text="{x:Static properties:Strings.GlyphForegroundLabel}" />
+                <ComboBox
+                    Grid.Row="1"
+                    Grid.Column="1"
+                    ItemsSource="{Binding Palette}"
+                    SelectedItem="{Binding SelectedForegroundSwatch}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate DataType="{x:Type vm:ColorSwatchViewModel}">
                             <StackPanel Orientation="Horizontal">
-                                <Rectangle Width="16"
-                                           Height="16"
-                                           Fill="{Binding Brush}"
-                                           Stroke="#33000000"
-                                           StrokeThickness="1"
-                                           Margin="0,0,6,0" />
-                                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
+                                <Rectangle
+                                    Width="16"
+                                    Height="16"
+                                    Margin="0,0,6,0"
+                                    Fill="{Binding Brush}"
+                                    Stroke="#33000000"
+                                    StrokeThickness="1" />
+                                <TextBlock VerticalAlignment="Center" Text="{Binding Name}" />
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
-                <TextBlock Grid.Row="2" Text="{x:Static properties:Strings.GlyphBackgroundLabel}" Margin="8,12,8,0" VerticalAlignment="Center" />
-                <ComboBox Grid.Row="2"
-                          Grid.Column="1"
-                          ItemsSource="{Binding Palette}"
-                          SelectedItem="{Binding SelectedBackgroundSwatch}">
+                <TextBlock
+                    Grid.Row="2"
+                    Margin="8,12,8,0"
+                    VerticalAlignment="Center"
+                    Text="{x:Static properties:Strings.GlyphBackgroundLabel}" />
+                <ComboBox
+                    Grid.Row="2"
+                    Grid.Column="1"
+                    ItemsSource="{Binding Palette}"
+                    SelectedItem="{Binding SelectedBackgroundSwatch}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate DataType="{x:Type vm:ColorSwatchViewModel}">
                             <StackPanel Orientation="Horizontal">
-                                <Rectangle Width="16"
-                                           Height="16"
-                                           Fill="{Binding Brush}"
-                                           Stroke="#33000000"
-                                           StrokeThickness="1"
-                                           Margin="0,0,6,0" />
-                                <TextBlock Text="{Binding Name}" VerticalAlignment="Center" />
+                                <Rectangle
+                                    Width="16"
+                                    Height="16"
+                                    Margin="0,0,6,0"
+                                    Fill="{Binding Brush}"
+                                    Stroke="#33000000"
+                                    StrokeThickness="1" />
+                                <TextBlock VerticalAlignment="Center" Text="{Binding Name}" />
                             </StackPanel>
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
