--- a/CSharpBible/Games/TileSetAnimator/App.xaml
+++ b/CSharpBible/Games/TileSetAnimator/App.xaml
@@ -1,7 +1,8 @@
-<Application x:Class="TileSetAnimator.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:TileSetAnimator">
+<Application
+    x:Class="TileSetAnimator.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:TileSetAnimator">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
