--- a/CSharpBible/Games/TileSetAnimator/Resources/Styles.xaml
+++ b/CSharpBible/Games/TileSetAnimator/Resources/Styles.xaml
@@ -1,5 +1,4 @@
-<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <SolidColorBrush x:Key="TileBorderBrush" Color="#FF4CAF50" />
     <SolidColorBrush x:Key="TileSelectionBrush" Color="#664CAF50" />
     <Style TargetType="Button">
