--- a/CSharpBible/Games/SharpHack.WPF2D/App.xaml
+++ b/CSharpBible/Games/SharpHack.WPF2D/App.xaml
@@ -1,9 +1,8 @@
-<Application x:Class="SharpHack.WPF2D.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+<Application
+    x:Class="SharpHack.WPF2D.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-        <ResourceDictionary>
-        </ResourceDictionary>
+        <ResourceDictionary />
     </Application.Resources>
 </Application>
