--- a/CSharpBible/Games/SharpHack.WPF2D/MainWindow.xaml
+++ b/CSharpBible/Games/SharpHack.WPF2D/MainWindow.xaml
@@ -1,7 +1,11 @@
 <Window x:Class="SharpHack.WPF2D.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:conv="clr-namespace:SharpHack.WPF2D.Converters"
         Title="SharpHack.WPF2D" Height="720" Width="1024">
+    <Window.Resources>
+        <conv:TileToImageConverter x:Key="TileToImageConverter" TileService="{Binding TileService, RelativeSource={RelativeSource AncestorType=Window}}" />
+    </Window.Resources>
     <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,17 +26,21 @@
             <TextBlock Text="{Binding Game.Level}" VerticalAlignment="Center"/>
         </StackPanel>
 
-        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Background="Black">
             <ItemsControl ItemsSource="{Binding Game.Cells}">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <UniformGrid Columns="{Binding Game.ViewWidth}" />
+                        <UniformGrid Columns="{Binding DataContext.Game.ViewWidth, RelativeSource={RelativeSource AncestorType=ItemsControl}}" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Border BorderBrush="#22000000" BorderThickness="0.5" Padding="4">
-                            <TextBlock Text="{Binding Structure.Symbol}" FontFamily="Consolas" />
+                        <Border BorderBrush="#22000000" BorderThickness="0.5">
+                            <Image Width="96"
+                                   Height="96"
+                                   Stretch="Fill"
+                                   RenderOptions.BitmapScalingMode="NearestNeighbor"
+                                   Source="{Binding Structure, Converter={StaticResource TileToImageConverter}}" />
                         </Border>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
